arreglando bug del background del dark mode

--- a/client/src/DarkMode.css
+++ b/client/src/DarkMode.css
@@ -10,10 +10,27 @@
     background-color: #071923;
     width: 100%;
     height: 100%;
-    position: absolute;
+    position: fixed;
   }
 }
-
+@media (max-width: 1300px) {
+  .DarkMode {
+    position: static;
+    width: 120%;
+  }
+}
+@media (max-width: 1200px) {
+  .DarkMode {
+    position: static;
+    width: 140%;
+  }
+}
+@media (max-width:1000px) {
+  .DarkMode {
+    position: static;
+    width: 155%;
+  }
+}
 .DarkMode .infoContainer {
   background-color: #999;
 }
