--- a/client/src/components/componentePrueba/ProjectCard.module.css
+++ b/client/src/components/componentePrueba/ProjectCard.module.css
@@ -214,6 +214,9 @@
     font-size: 14px;
     margin: 10px;
   }
+  .paramText{
+    display: none;
+  }
   .paramProject {
     text-align: center;
   }
