--- a/client/src/components/userCard/User.module.css
+++ b/client/src/components/userCard/User.module.css
@@ -61,11 +61,12 @@
   justify-content: center;
 }
 .foto {
-  width: 20em;
-  height: 20em;
+  width: 17em;
+  height: 17em;
   object-fit: cover;
   border-radius: 50%;
   margin: 10px;
+  margin-top: 40px;
 }
 /* Button */
 .buttonContainer {
